add endpoint register job
