# server/pb/transaction_status_api.pb.go
@@ -37,7 +37,7 @@ var file_transaction_status_api_proto_rawDesc = []byte{
 	0x70, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f,
 	0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x20, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61,
 	0x63, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x5f, 0x70, 0x61, 0x79,
-	0x6c, 0x6f, 0x61, 0x64, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0xf5, 0x0a, 0x0a, 0x18, 0x54,
+	0x6c, 0x6f, 0x61, 0x64, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0xab, 0x0d, 0x0a, 0x18, 0x54,
 	0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73,
 	0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0xb7, 0x01, 0x0a, 0x0b, 0x48, 0x65, 0x61, 0x6c,
 	0x74, 0x68, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65,
@@ -125,48 +125,72 @@ var file_transaction_status_api_proto_rawDesc = []byte{
 	0x20, 0x74, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x20, 0x64, 0x61, 0x74, 0x61, 0x82, 0xd3,
 	0xe4, 0x93, 0x02, 0x1e, 0x3a, 0x01, 0x2a, 0x22, 0x19, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x74, 0x65,
 	0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x2f, 0x64, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x2d, 0x64, 0x61,
-	0x74, 0x61, 0x42, 0x91, 0x01, 0x92, 0x41, 0x87, 0x01, 0x12, 0x1c, 0x0a, 0x15, 0x54, 0x65, 0x6d,
-	0x70, 0x6c, 0x61, 0x74, 0x65, 0x20, 0x47, 0x52, 0x50, 0x43, 0x20, 0x53, 0x65, 0x72, 0x76, 0x69,
-	0x63, 0x65, 0x32, 0x03, 0x31, 0x2e, 0x30, 0x5a, 0x59, 0x0a, 0x57, 0x0a, 0x06, 0x62, 0x65, 0x61,
-	0x72, 0x65, 0x72, 0x12, 0x4d, 0x08, 0x02, 0x12, 0x38, 0x41, 0x75, 0x74, 0x68, 0x65, 0x6e, 0x74,
-	0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x20, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x2c, 0x20, 0x70,
-	0x72, 0x65, 0x66, 0x69, 0x78, 0x65, 0x64, 0x20, 0x62, 0x79, 0x20, 0x42, 0x65, 0x61, 0x72, 0x65,
-	0x72, 0x3a, 0x20, 0x42, 0x65, 0x61, 0x72, 0x65, 0x72, 0x20, 0x3c, 0x74, 0x6f, 0x6b, 0x65, 0x6e,
-	0x3e, 0x1a, 0x0d, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x69, 0x7a, 0x61, 0x74, 0x69, 0x6f, 0x6e,
-	0x20, 0x02, 0x62, 0x0c, 0x0a, 0x0a, 0x0a, 0x06, 0x62, 0x65, 0x61, 0x72, 0x65, 0x72, 0x12, 0x00,
-	0x5a, 0x04, 0x2e, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x74, 0x61, 0x12, 0xb3, 0x02, 0x0a, 0x1d, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x4a,
+	0x6f, 0x62, 0x54, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x50, 0x65, 0x6e,
+	0x64, 0x69, 0x6e, 0x67, 0x12, 0x44, 0x2e, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69,
+	0x6f, 0x6e, 0x5f, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
+	0x65, 0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x4a, 0x6f, 0x62,
+	0x54, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x50, 0x65, 0x6e, 0x64, 0x69,
+	0x6e, 0x67, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x44, 0x2e, 0x74, 0x72, 0x61,
+	0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x2e,
+	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x67, 0x69, 0x73,
+	0x74, 0x65, 0x72, 0x4a, 0x6f, 0x62, 0x54, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f,
+	0x6e, 0x50, 0x65, 0x6e, 0x64, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
+	0x22, 0x85, 0x01, 0x92, 0x41, 0x60, 0x0a, 0x12, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74,
+	0x69, 0x6f, 0x6e, 0x2d, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x1c, 0x72, 0x65, 0x67, 0x69,
+	0x73, 0x74, 0x65, 0x72, 0x20, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e,
+	0x20, 0x70, 0x65, 0x6e, 0x64, 0x69, 0x6e, 0x67, 0x1a, 0x2c, 0x74, 0x68, 0x69, 0x73, 0x20, 0x69,
+	0x73, 0x20, 0x66, 0x6f, 0x72, 0x20, 0x72, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x20, 0x6a,
+	0x6f, 0x62, 0x20, 0x66, 0x6f, 0x72, 0x20, 0x71, 0x75, 0x65, 0x75, 0x65, 0x20, 0x74, 0x6f, 0x20,
+	0x72, 0x61, 0x62, 0x62, 0x69, 0x74, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1c, 0x3a, 0x01, 0x2a, 0x22,
+	0x17, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x74, 0x72, 0x61, 0x6e, 0x73, 0x61, 0x63, 0x74, 0x69, 0x6f,
+	0x6e, 0x2d, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x42, 0x91, 0x01, 0x92, 0x41, 0x87, 0x01, 0x12,
+	0x1c, 0x0a, 0x15, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x20, 0x47, 0x52, 0x50, 0x43,
+	0x20, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x32, 0x03, 0x31, 0x2e, 0x30, 0x5a, 0x59, 0x0a,
+	0x57, 0x0a, 0x06, 0x62, 0x65, 0x61, 0x72, 0x65, 0x72, 0x12, 0x4d, 0x08, 0x02, 0x12, 0x38, 0x41,
+	0x75, 0x74, 0x68, 0x65, 0x6e, 0x74, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x20, 0x74, 0x6f,
+	0x6b, 0x65, 0x6e, 0x2c, 0x20, 0x70, 0x72, 0x65, 0x66, 0x69, 0x78, 0x65, 0x64, 0x20, 0x62, 0x79,
+	0x20, 0x42, 0x65, 0x61, 0x72, 0x65, 0x72, 0x3a, 0x20, 0x42, 0x65, 0x61, 0x72, 0x65, 0x72, 0x20,
+	0x3c, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x3e, 0x1a, 0x0d, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x69,
+	0x7a, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x20, 0x02, 0x62, 0x0c, 0x0a, 0x0a, 0x0a, 0x06, 0x62, 0x65,
+	0x61, 0x72, 0x65, 0x72, 0x12, 0x00, 0x5a, 0x04, 0x2e, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x33,
 }
 
 var file_transaction_status_api_proto_goTypes = []interface{}{
-	(*emptypb.Empty)(nil),             // 0: google.protobuf.Empty
-	(*GetAllTemplatesRequest)(nil),    // 1: transaction_status.service.v1.GetAllTemplatesRequest
-	(*GetTemplateDetailRequest)(nil),  // 2: transaction_status.service.v1.GetTemplateDetailRequest
-	(*SaveTemplateRequest)(nil),       // 3: transaction_status.service.v1.SaveTemplateRequest
-	(*UpdateTemplateRequest)(nil),     // 4: transaction_status.service.v1.UpdateTemplateRequest
-	(*DeleteTemplateRequest)(nil),     // 5: transaction_status.service.v1.DeleteTemplateRequest
-	(*HealthCheckResponse)(nil),       // 6: transaction_status.service.v1.HealthCheckResponse
-	(*GetAllTemplatesResponse)(nil),   // 7: transaction_status.service.v1.GetAllTemplatesResponse
-	(*GetTemplateDetailResponse)(nil), // 8: transaction_status.service.v1.GetTemplateDetailResponse
-	(*GeneralBodyResponse)(nil),       // 9: transaction_status.service.v1.GeneralBodyResponse
+	(*emptypb.Empty)(nil),                         // 0: google.protobuf.Empty
+	(*GetAllTemplatesRequest)(nil),                // 1: transaction_status.service.v1.GetAllTemplatesRequest
+	(*GetTemplateDetailRequest)(nil),              // 2: transaction_status.service.v1.GetTemplateDetailRequest
+	(*SaveTemplateRequest)(nil),                   // 3: transaction_status.service.v1.SaveTemplateRequest
+	(*UpdateTemplateRequest)(nil),                 // 4: transaction_status.service.v1.UpdateTemplateRequest
+	(*DeleteTemplateRequest)(nil),                 // 5: transaction_status.service.v1.DeleteTemplateRequest
+	(*RegisterJobTransactionPendingeRequest)(nil), // 6: transaction_status.service.v1.RegisterJobTransactionPendingeRequest
+	(*HealthCheckResponse)(nil),                   // 7: transaction_status.service.v1.HealthCheckResponse
+	(*GetAllTemplatesResponse)(nil),               // 8: transaction_status.service.v1.GetAllTemplatesResponse
+	(*GetTemplateDetailResponse)(nil),             // 9: transaction_status.service.v1.GetTemplateDetailResponse
+	(*GeneralBodyResponse)(nil),                   // 10: transaction_status.service.v1.GeneralBodyResponse
+	(*RegisterJobTransactionPendingResponse)(nil), // 11: transaction_status.service.v1.RegisterJobTransactionPendingResponse
 }
 var file_transaction_status_api_proto_depIdxs = []int32{
-	0, // 0: transaction_status.service.v1.TransactionStatusService.HealthCheck:input_type -> google.protobuf.Empty
-	1, // 1: transaction_status.service.v1.TransactionStatusService.GetAllTemplates:input_type -> transaction_status.service.v1.GetAllTemplatesRequest
-	2, // 2: transaction_status.service.v1.TransactionStatusService.GetTemplateDetail:input_type -> transaction_status.service.v1.GetTemplateDetailRequest
-	3, // 3: transaction_status.service.v1.TransactionStatusService.SaveTemplate:input_type -> transaction_status.service.v1.SaveTemplateRequest
-	4, // 4: transaction_status.service.v1.TransactionStatusService.UpdateTemplate:input_type -> transaction_status.service.v1.UpdateTemplateRequest
-	5, // 5: transaction_status.service.v1.TransactionStatusService.DeleteTemplate:input_type -> transaction_status.service.v1.DeleteTemplateRequest
-	6, // 6: transaction_status.service.v1.TransactionStatusService.HealthCheck:output_type -> transaction_status.service.v1.HealthCheckResponse
-	7, // 7: transaction_status.service.v1.TransactionStatusService.GetAllTemplates:output_type -> transaction_status.service.v1.GetAllTemplatesResponse
-	8, // 8: transaction_status.service.v1.TransactionStatusService.GetTemplateDetail:output_type -> transaction_status.service.v1.GetTemplateDetailResponse
-	9, // 9: transaction_status.service.v1.TransactionStatusService.SaveTemplate:output_type -> transaction_status.service.v1.GeneralBodyResponse
-	8, // 10: transaction_status.service.v1.TransactionStatusService.UpdateTemplate:output_type -> transaction_status.service.v1.GetTemplateDetailResponse
-	9, // 11: transaction_status.service.v1.TransactionStatusService.DeleteTemplate:output_type -> transaction_status.service.v1.GeneralBodyResponse
-	6, // [6:12] is the sub-list for method output_type
-	0, // [0:6] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
+	0,  // 0: transaction_status.service.v1.TransactionStatusService.HealthCheck:input_type -> google.protobuf.Empty
+	1,  // 1: transaction_status.service.v1.TransactionStatusService.GetAllTemplates:input_type -> transaction_status.service.v1.GetAllTemplatesRequest
+	2,  // 2: transaction_status.service.v1.TransactionStatusService.GetTemplateDetail:input_type -> transaction_status.service.v1.GetTemplateDetailRequest
+	3,  // 3: transaction_status.service.v1.TransactionStatusService.SaveTemplate:input_type -> transaction_status.service.v1.SaveTemplateRequest
+	4,  // 4: transaction_status.service.v1.TransactionStatusService.UpdateTemplate:input_type -> transaction_status.service.v1.UpdateTemplateRequest
+	5,  // 5: transaction_status.service.v1.TransactionStatusService.DeleteTemplate:input_type -> transaction_status.service.v1.DeleteTemplateRequest
+	6,  // 6: transaction_status.service.v1.TransactionStatusService.RegisterJobTransactionPending:input_type -> transaction_status.service.v1.RegisterJobTransactionPendingeRequest
+	7,  // 7: transaction_status.service.v1.TransactionStatusService.HealthCheck:output_type -> transaction_status.service.v1.HealthCheckResponse
+	8,  // 8: transaction_status.service.v1.TransactionStatusService.GetAllTemplates:output_type -> transaction_status.service.v1.GetAllTemplatesResponse
+	9,  // 9: transaction_status.service.v1.TransactionStatusService.GetTemplateDetail:output_type -> transaction_status.service.v1.GetTemplateDetailResponse
+	10, // 10: transaction_status.service.v1.TransactionStatusService.SaveTemplate:output_type -> transaction_status.service.v1.GeneralBodyResponse
+	9,  // 11: transaction_status.service.v1.TransactionStatusService.UpdateTemplate:output_type -> transaction_status.service.v1.GetTemplateDetailResponse
+	10, // 12: transaction_status.service.v1.TransactionStatusService.DeleteTemplate:output_type -> transaction_status.service.v1.GeneralBodyResponse
+	11, // 13: transaction_status.service.v1.TransactionStatusService.RegisterJobTransactionPending:output_type -> transaction_status.service.v1.RegisterJobTransactionPendingResponse
+	7,  // [7:14] is the sub-list for method output_type
+	0,  // [0:7] is the sub-list for method input_type
+	0,  // [0:0] is the sub-list for extension type_name
+	0,  // [0:0] is the sub-list for extension extendee
+	0,  // [0:0] is the sub-list for field type_name
 }
 
 func init() { file_transaction_status_api_proto_init() }
