# server/pb/transaction_status_api.pb.gw.go
@@ -220,6 +220,40 @@ func local_request_TransactionStatusService_DeleteTemplate_0(ctx context.Context
 
 }
 
+func request_TransactionStatusService_RegisterJobTransactionPending_0(ctx context.Context, marshaler runtime.Marshaler, client TransactionStatusServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq RegisterJobTransactionPendingeRequest
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.RegisterJobTransactionPending(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_TransactionStatusService_RegisterJobTransactionPending_0(ctx context.Context, marshaler runtime.Marshaler, server TransactionStatusServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq RegisterJobTransactionPendingeRequest
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.RegisterJobTransactionPending(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterTransactionStatusServiceHandlerServer registers the http handlers for service TransactionStatusService to "mux".
 // UnaryRPC     :call TransactionStatusServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -373,6 +407,31 @@ func RegisterTransactionStatusServiceHandlerServer(ctx context.Context, mux *run
 		}
 
 		forward_TransactionStatusService_DeleteTemplate_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_TransactionStatusService_RegisterJobTransactionPending_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/transaction_status.service.v1.TransactionStatusService/RegisterJobTransactionPending", runtime.WithHTTPPathPattern("/api/transaction-status"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_TransactionStatusService_RegisterJobTransactionPending_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_TransactionStatusService_RegisterJobTransactionPending_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -549,6 +608,28 @@ func RegisterTransactionStatusServiceHandlerClient(ctx context.Context, mux *run
 
 	})
 
+	mux.Handle("POST", pattern_TransactionStatusService_RegisterJobTransactionPending_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/transaction_status.service.v1.TransactionStatusService/RegisterJobTransactionPending", runtime.WithHTTPPathPattern("/api/transaction-status"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_TransactionStatusService_RegisterJobTransactionPending_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_TransactionStatusService_RegisterJobTransactionPending_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -564,6 +645,8 @@ var (
 	pattern_TransactionStatusService_UpdateTemplate_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "template", "update-data"}, ""))
 
 	pattern_TransactionStatusService_DeleteTemplate_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "template", "delete-data"}, ""))
+
+	pattern_TransactionStatusService_RegisterJobTransactionPending_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"api", "transaction-status"}, ""))
 )
 
 var (
@@ -578,4 +661,6 @@ var (
 	forward_TransactionStatusService_UpdateTemplate_0 = runtime.ForwardResponseMessage
 
 	forward_TransactionStatusService_DeleteTemplate_0 = runtime.ForwardResponseMessage
+
+	forward_TransactionStatusService_RegisterJobTransactionPending_0 = runtime.ForwardResponseMessage
 )
