# server/pb/transaction_status_core.pb.go
@@ -218,6 +218,55 @@ func (Status) EnumDescriptor() ([]byte, []int) {
 	return file_transaction_status_core_proto_rawDescGZIP(), []int{2}
 }
 
+type StatusInquiryJob int32
+
+const (
+	StatusInquiryJob_NEW      StatusInquiryJob = 0
+	StatusInquiryJob_IN_QUEUE StatusInquiryJob = 1
+	StatusInquiryJob_DONE     StatusInquiryJob = 2
+)
+
+// Enum value maps for StatusInquiryJob.
+var (
+	StatusInquiryJob_name = map[int32]string{
+		0: "NEW",
+		1: "IN_QUEUE",
+		2: "DONE",
+	}
+	StatusInquiryJob_value = map[string]int32{
+		"NEW":      0,
+		"IN_QUEUE": 1,
+		"DONE":     2,
+	}
+)
+
+func (x StatusInquiryJob) Enum() *StatusInquiryJob {
+	p := new(StatusInquiryJob)
+	*p = x
+	return p
+}
+
+func (x StatusInquiryJob) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (StatusInquiryJob) Descriptor() protoreflect.EnumDescriptor {
+	return file_transaction_status_core_proto_enumTypes[3].Descriptor()
+}
+
+func (StatusInquiryJob) Type() protoreflect.EnumType {
+	return &file_transaction_status_core_proto_enumTypes[3]
+}
+
+func (x StatusInquiryJob) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use StatusInquiryJob.Descriptor instead.
+func (StatusInquiryJob) EnumDescriptor() ([]byte, []int) {
+	return file_transaction_status_core_proto_rawDescGZIP(), []int{3}
+}
+
 var File_transaction_status_core_proto protoreflect.FileDescriptor
 
 var file_transaction_status_core_proto_rawDesc = []byte{
@@ -253,8 +302,11 @@ var file_transaction_status_core_proto_rawDesc = []byte{
 	0x0c, 0x0a, 0x08, 0x41, 0x50, 0x50, 0x52, 0x4f, 0x56, 0x45, 0x44, 0x10, 0x0d, 0x12, 0x0a, 0x0a,
 	0x06, 0x41, 0x43, 0x54, 0x49, 0x56, 0x45, 0x10, 0x0e, 0x12, 0x0c, 0x0a, 0x08, 0x49, 0x4e, 0x41,
 	0x43, 0x54, 0x49, 0x56, 0x45, 0x10, 0x0f, 0x12, 0x0b, 0x0a, 0x07, 0x45, 0x58, 0x50, 0x49, 0x52,
-	0x45, 0x44, 0x10, 0x10, 0x42, 0x06, 0x5a, 0x04, 0x2e, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x33,
+	0x45, 0x44, 0x10, 0x10, 0x2a, 0x33, 0x0a, 0x10, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x49, 0x6e,
+	0x71, 0x75, 0x69, 0x72, 0x79, 0x4a, 0x6f, 0x62, 0x12, 0x07, 0x0a, 0x03, 0x4e, 0x45, 0x57, 0x10,
+	0x00, 0x12, 0x0c, 0x0a, 0x08, 0x49, 0x4e, 0x5f, 0x51, 0x55, 0x45, 0x55, 0x45, 0x10, 0x01, 0x12,
+	0x08, 0x0a, 0x04, 0x44, 0x4f, 0x4e, 0x45, 0x10, 0x02, 0x42, 0x06, 0x5a, 0x04, 0x2e, 0x2f, 0x70,
+	0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -269,11 +321,12 @@ func file_transaction_status_core_proto_rawDescGZIP() []byte {
 	return file_transaction_status_core_proto_rawDescData
 }
 
-var file_transaction_status_core_proto_enumTypes = make([]protoimpl.EnumInfo, 3)
+var file_transaction_status_core_proto_enumTypes = make([]protoimpl.EnumInfo, 4)
 var file_transaction_status_core_proto_goTypes = []interface{}{
-	(Direction)(0), // 0: transaction_status.service.v1.Direction
-	(TaskStep)(0),  // 1: transaction_status.service.v1.TaskStep
-	(Status)(0),    // 2: transaction_status.service.v1.Status
+	(Direction)(0),        // 0: transaction_status.service.v1.Direction
+	(TaskStep)(0),         // 1: transaction_status.service.v1.TaskStep
+	(Status)(0),           // 2: transaction_status.service.v1.Status
+	(StatusInquiryJob)(0), // 3: transaction_status.service.v1.statusInquiryJob
 }
 var file_transaction_status_core_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for method output_type
@@ -293,7 +346,7 @@ func file_transaction_status_core_proto_init() {
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_transaction_status_core_proto_rawDesc,
-			NumEnums:      3,
+			NumEnums:      4,
 			NumMessages:   0,
 			NumExtensions: 0,
 			NumServices:   0,
